--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -6,7 +6,7 @@
 # Profile Configuration
 #  available profiles: batch
 ##
-spring.profiles.active=batch
+#spring.profiles.active=batch
 
 ##
 # Data Source Configuration
@@ -29,6 +29,7 @@ endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
 
 management.context-path=/actuators
+management.security.role=SYSADMIN
 
 # http://localhost:8080/actuators/info
 info.app.name=Web Services
@@ -36,3 +37,10 @@ info.app.description=A RESTful web services project using Spring Boot.
 info.build.groupId=@project.groupId@
 info.build.artifact=@project.artifactId@
 info.build.version=@project.version@
+
+##
+# Spring Security Configuration
+##
+
+security.user.name=shulander
+security.user.password=ASDqwe123
