--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,36 @@ buildscript {
   }
   
   dependencies {
-    classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.3.3.RELEASE'
+    classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.3.4.RELEASE'
   }
+}
+plugins {
+    id 'com.gradle.build-receipt' version '1.1'
+}
+buildReceiptLicense {
+    agreementUrl = 'https://gradle.com/terms-of-service'
+    agree = 'yes'
 }
 
 apply plugin: 'java'
-// apply plugin: 'netbeans'
 // apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Spring-boot Test Project',
+                   'Implementation-Version': version
+    }
+}
+uploadArchives {
+    repositories {
+       flatDir {
+           dirs 'repos'
+       }
+    }
+}
 
 ext {
   guavaVersion = '19.0'
