--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-  repositories {
-    jcenter()
-  }
+	repositories {
+		jcenter()
+	}
   
-  dependencies {
-    classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.3.4.RELEASE'
-  }
+	dependencies {
+		classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.3.4.RELEASE'
+	}
 }
 plugins {
     id 'com.gradle.build-receipt' version '1.1'
@@ -19,6 +19,8 @@ apply plugin: 'java'
 // apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 apply plugin: 'maven'
+apply plugin: 'project-report'
+apply plugin: 'build-dashboard'
 
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -30,40 +32,40 @@ jar {
 }
 uploadArchives {
     repositories {
-       flatDir {
-           dirs 'repos'
-       }
+		flatDir {
+			dirs 'repos'
+		}
     }
 }
 
 ext {
-  guavaVersion = '19.0'
-  jadiraVersion = '4.0.0.GA'
-  swaggerVersion = '2.3.0'
+	guavaVersion = '19.0'
+	jadiraVersion = '4.0.0.GA'
+	swaggerVersion = '2.3.0'
 }
 
 repositories {
 	jcenter()
-//	mavenCentral()
+	//	mavenCentral()
 }
 
 dependencies {
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   
-  compile group: 'org.springframework', name: 'spring-context-support'
+	compile group: 'org.springframework', name: 'spring-context-support'
   
-  compile group: 'joda-time', name: 'joda-time'
-  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-joda'
-  compile group: 'com.google.guava', name: 'guava', version: guavaVersion
-  compile group: 'org.jadira.usertype', name: 'usertype.extended', version: jadiraVersion
-  compile group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion
-  compile group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion
+	compile group: 'joda-time', name: 'joda-time'
+	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-joda'
+	compile group: 'com.google.guava', name: 'guava', version: guavaVersion
+	compile group: 'org.jadira.usertype', name: 'usertype.extended', version: jadiraVersion
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion
   
-  runtime group: 'org.hsqldb', name: 'hsqldb'
-  runtime group: 'mysql', name: 'mysql-connector-java'
+	runtime group: 'org.hsqldb', name: 'hsqldb'
+	runtime group: 'mysql', name: 'mysql-connector-java'
   
-  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
