Using the Gradle JaCoCo Plugin for Unit Test Code Coverage Reporting

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'maven'
 apply plugin: 'project-report'
 apply plugin: 'build-dashboard'
+apply plugin: 'jacoco'
 
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -42,6 +43,7 @@ ext {
 	guavaVersion = '19.0'
 	jadiraVersion = '4.0.0.GA'
 	swaggerVersion = '2.3.0'
+	jacocoVersion = '0.7.6.201602180812'
 }
 
 repositories {
@@ -69,3 +71,18 @@ dependencies {
   
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
+
+jacoco {
+	toolVersion = jacocoVersion
+}
+
+jacocoTestReport {
+	reports {
+		html.enabled = true
+		xml.enabled = true
+		csv.enabled = true
+	}
+}
+
+// finalizedBy executes jacocoTestReport after test taks has finished
+test.finalizedBy jacocoTestReport
