--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,11 @@ apply plugin: 'project-report'
 apply plugin: 'build-dashboard'
 apply plugin: 'jacoco'
 apply plugin: 'checkstyle'
+apply plugin: 'pmd'
 
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
+
 jar {
 	manifest {
 		attributes 'Implementation-Title': 'Spring-boot Test Project',
@@ -46,6 +48,7 @@ ext {
 	swaggerVersion = '2.3.0'
 	jacocoVersion = '0.7.6.201602180812'
 	checkstyleVersion = '6.18'
+    pmdVersion = '5.4.1'
 }
 
 repositories {
@@ -82,8 +85,8 @@ jacoco {
 jacocoTestReport {
 	reports {
 		html.enabled = true
-		xml.enabled = true
-		csv.enabled = true
+		xml.enabled = false
+		csv.enabled = false
 	}
 }
 
@@ -93,4 +96,10 @@ test.finalizedBy jacocoTestReport
 checkstyle {
 	toolVersion = checkstyleVersion
 	config = rootProject.resources.text.fromFile('etc/checkstyle/rules.xml')
+}
+
+pmd {
+    toolVersion = pmdVersion
+    ruleSetConfig = rootProject.resources.text.fromFile('etc/pmd/ruleset.xml');
+    ignoreFailures = true
 }
