--- a/src/main/resources/config/application-batch.properties
+++ b/src/main/resources/config/application-batch.properties
@@ -1,13 +1,13 @@
-##
-# The Batch Applicatoin Configuration file
+###
+# The Batch Application Configuration File
 # 
-# This file is included when the 'batch' Spring profile is active
-##
+# This file is included when the 'batch' Spring profile is active.
+###
 
 ##
-# Greeting Schedule Process Configuration
+# Greeting Scheduled Process Configuration
 ##
-batch.greeting.fixdrate=15000
-batch.greeting.fixeddelay=15000
-batch.greeting.initialdelay=5000
-batch.greeting.cron=0,30 * * * * *
+batch.greeting.fixedrate=600000
+batch.greeting.fixeddelay=900000
+batch.greeting.initialdelay=300000
+batch.greeting.cron=0 */5 * * * *
