--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,12 +1,14 @@
 ###
-# The Base Application Configuration File
-##
+# The main application configuration file.
+#
+# This file is loaded automatically by Spring Boot when the application starts.
+###
 
 ##
 # Profile Configuration
-#  available profiles: batch
-##
-#spring.profiles.active=batch
+#  available profiles: hsqldb, batch
+###
+spring.profiles.active=hsqldb,batch
 
 ##
 # Data Source Configuration
@@ -14,11 +16,11 @@
 
 # Hibernate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=validate
 
 # Initialization
-spring.datasource.schema=classpath:/data/hsqldb/schema.sql
-spring.datasource.data=classpath:/data/hsqldb/data.sql
+# spring.datasource.schema=classpath:/data/hsqldb/schema.sql
+# spring.datasource.data=classpath:/data/hsqldb/data.sql
 
 ##
 # Actuator Configuration
@@ -34,7 +36,7 @@ management.security.role=SYSADMIN
 # http://localhost:8080/actuators/info
 info.app.name=Web Services
 info.app.description=A RESTful web services project using Spring Boot.
-info.build.groupId=@project.groupId@
+info.build.group=@project.groupId@
 info.build.artifact=@project.artifactId@
 info.build.version=@project.version@
 
