Abstracting Common Transactional Attributes into a Mapped Superclass with Spring Data JPA

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -8,7 +8,7 @@
 # Profile Configuration
 #  available profiles: hsqldb, batch
 ###
-spring.profiles.active=hsqldb,batch
+spring.profiles.active=hsqldb
 
 ##
 # Data Source Configuration
@@ -16,11 +16,6 @@ spring.profiles.active=hsqldb,batch
 
 # Hibernate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-# spring.jpa.hibernate.ddl-auto=validate
-
-# Initialization
-# spring.datasource.schema=classpath:/data/hsqldb/schema.sql
-# spring.datasource.data=classpath:/data/hsqldb/data.sql
 
 ##
 # Actuator Configuration
@@ -43,6 +38,5 @@ info.build.version=@project.version@
 ##
 # Spring Security Configuration
 ##
-
 security.user.name=shulander
 security.user.password=ASDqwe123
