Using JODA Framework Classes as JPA Entity Model Attributes with Spring Data JPA
 * fix the unit tests

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -17,6 +17,8 @@ spring.profiles.active=hsqldb
 # Hibernate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
 ##
 # Actuator Configuration
 ##
