Using a MySQL Database with Spring Data JPA

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -6,9 +6,9 @@
 
 ##
 # Profile Configuration
-#  available profiles: hsqldb, batch
+#  available profiles: db(hsqldb, mysql), batch
 ###
-spring.profiles.active=hsqldb
+spring.profiles.active=mysql
 
 ##
 # Data Source Configuration
