--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -8,34 +8,40 @@
 # Profile Configuration
 #  available profiles: db(hsqldb, mysql), batch
 ###
-spring.profiles.active=mysql
+spring.profiles.active=hsqldb
 
 ##
 # Data Source Configuration
 ###
 
 # Hibernate
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
+##
+# Cache Configuration
+##
+sping.cache.cache-names=greetings
+spring.cache.caffeine.spec=maximumSize=250,expireAfterAccess=600s
 
 ##
 # Actuator Configuration
 ##
 endpoints.health.id=status
-endpoints.health.sensitive=false
+endpoints.health.sensitive=true
 endpoints.shutdown.enabled=true
-endpoints.shutdown.sensitive=false
+endpoints.shutdown.sensitive=true
 
 management.context-path=/actuators
 management.security.role=SYSADMIN
 
 # http://localhost:8080/actuators/info
-info.app.name=Web Services
-info.app.description=A RESTful web services project using Spring Boot.
-info.build.group=@project.groupId@
-info.build.artifact=@project.artifactId@
-info.build.version=@project.version@
+#info.app.name=Web Services
+#info.app.description=A RESTful web services project using Spring Boot.
+#info.build.group=@project.groupId@
+#info.build.artifact=@project.artifactId@
+#info.build.version=@project.version@
 
 ##
 # Spring Security Configuration
