--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     }
   
     dependencies {
-        //        classpath("org.springframework.boot:spring-boot-gradle-plugin:v1.4.4.RELEASE")
         //        classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.3.4.RELEASE'
-        classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.4.4.RELEASE'
+//        classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.4.4.RELEASE'
+        classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.5.1.RELEASE'
     }
 }
 
@@ -97,6 +97,7 @@ dependencies {
     compile group: 'org.jadira.usertype', name: 'usertype.extended', version: jadiraVersion
     compile group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion
+    compile("org.springframework.boot:spring-boot-devtools")
   
     runtime group: 'org.hsqldb', name: 'hsqldb'
     runtime group: 'mysql', name: 'mysql-connector-java'
