fix the actuators security problem

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -34,7 +34,8 @@ endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=true
 
 management.context-path=/actuators
-management.security.role=SYSADMIN
+management.security.roles=SYSADMIN
+management.security.enabled=true
 
 # http://localhost:8080/actuators/info
 #info.app.name=Web Services
